--- a/Koncepcja-pracy.html
+++ b/Koncepcja-pracy.html
@@ -105,7 +105,7 @@
 </div>
 </section>
 <!-- Start Footer -->
-<div class="container">
+<div class="container koncepcja-wrapper">
 	<h1 id="koncepcja-header">
 		KONCEPCJA PRACY
 		MIEJSKIEGO PRZEDSZKOLA Z ODDZIAŁAMI INTEGRACYJNYMI NR 16
