--- a/add-gallery.html
+++ b/add-gallery.html
@@ -92,7 +92,7 @@
 <section id="add-news-margin">
 <div class="container">
 	<div class="add-news-gallery-header">
-		<h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc bibendum</h2>
+		<h2>Lorem ipsum dolor sit amet, consectetur adipiscing </h2>
 		<div class="blue-underline"></div>
 		<div class="data-gallery-icon">
 			<i class="far fa-calendar-alt"></i>
@@ -305,6 +305,83 @@
 
 	</div>
 </section>
+
+<div class="container">
+	<div class="under-gallery-text">
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eget ornare justo. Integer semper urna et vestibulum tempus. Nunc vitae arcu dictum, tincidunt nulla ut, dignissim leo. Integer tempus augue sed tortor tempor, ac iaculis nisl tincidunt. Vestibulum metus dolor, tempus vel ligula eget, commodo molestie lectus. Sed id nisi malesuada, consequat purus vitae, placerat ex. Etiam finibus purus cursus ex posuere, vitae finibus sapien varius. Proin ut lorem eu turpis gravida consequat. Praesent ornare ullamcorper scelerisque. Quisque suscipit, risus ultrices tempor pulvinar, mi quam posuere eros, vitae consectetur massa dolor non dui.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eget ornare justo. Integer semper urna et vestibulum tempus. Nunc vitae arcu dictum, tincidunt nulla ut, dignissim leo. Integer tempus augue sed tortor tempor, ac iaculis nisl tincidunt. Vestibulum metus dolor, tempus vel ligula eget, commodo molestie lectus</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eget ornare justo. Integer semper urna et vestibulum tempus. Nunc vitae arcu dictum, tincidunt nulla ut, dignissim leo. Integer tempus augue sed tortor tempor, ac iaculis nisl tincidunt. Vestibulum metus dolor, tempus vel ligula eget, commodo molestie lectus</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eget ornare justo. Integer semper urna et vestibulum tempus. Nunc vitae arcu dictum, tincidunt nulla ut, dignissim leo. Integer tempus augue sed tortor tempor, ac iaculis nisl tincidunt. Vestibulum metus dolor, tempus vel ligula eget, commodo molestie lectus. Sed id nisi malesuada, consequat purus vitae, placerat ex. Etiam finibus purus cursus ex posuere, vitae finibus sapien varius. Proin ut lorem eu turpis gravida consequat. Praesent ornare ullamcorper scelerisque. Quisque suscipit, risus ultrices tempor pulvinar, mi quam posuere eros, vitae consectetur massa dolor non dui.</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eget ornare justo. Integer semper urna et vestibulum tempus. Nunc vitae arcu dictum, tincidunt nulla ut, dignissim leo. Integer tempus augue sed tortor tempor, ac iaculis nisl tincidunt. Vestibulum metus dolor, tempus vel ligula eget, commodo molestie lectus. Sed id nisi malesuada, consequat purus vitae, placerat ex. Etiam finibus purus cursus ex posuere, vitae finibus sapien varius. Proin ut lorem eu turpis gravida consequat. Praesent ornare ullamcorper scelerisque. Quisque suscipit, risus ultrices tempor pulvinar, mi quam posuere eros, vitae consectetur massa dolor non dui.</p>
+	</div>
+</div>
+
+<section id="section-news">
+	<div class="container" style="height:400px">
+		<div class="owl-carousel before-p"style="height:400px">
+
+    	<div class="news-wrap">
+				<p class="data-color-pink">08.07.2019</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+				 Nam massa odio, pulvinar vitae risus at, luctus scelerisquenim.
+				Mauris pellentesque, velit in vestibulum pellentesque, e
+			rat nulla ultricies purus, et dignissim justo ante non risus
+				<div class="pink-line"></div>
+				<div class="more-wrap">
+					<a href="#" class="more">Więcej>></a>
+				</div>
+		</div>
+
+		<div class="news-wrap">
+			<p class="data-color-blue">09.07.2019</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+			 Nam massa odio, pulvinar vitae risus at, luctus scelerisquenim.
+			Mauris pellentesque, velit in vestibulum pellentesque, e
+		rat nulla ultricies purus, et dignissim justo ante non risus
+		<div class="blue-line"></div>
+		<div class="more-wrap">
+		<a href="#"class="more2">Więcej>></a>
+		</div>
+	</div>
+
+	<div class="news-wrap">
+		<p class="data-color-green">10.07.2019</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+		 Nam massa odio, pulvinar vitae risus at, luctus scelerisquenim.
+		Mauris pellentesque, velit in vestibulum pellentesque, e
+	rat nulla ultricies purus, et dignissim justo ante non risus
+	<div class="green-line"></div>
+	<div class="more-wrap">
+		<a href="#"class="more3">Więcej>></a>
+	</div>
+</div>
+
+<div class="news-wrap">
+	<p class="data-color-yellow">11.07.2019</p>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+	 Nam massa odio, pulvinar vitae risus at, luctus scelerisquenim.
+	Mauris pellentesque, velit in vestibulum pellentesque, e
+rat nulla ultricies purus, et dignissim justo ante non risus
+<div class="yelllow-line"></div>
+<div class="more-wrap">
+	<a href="#" class="more4">Więcej>></a>
+</div>
+</div>
+
+<div class="news-wrap">
+	<p class="data-color-orange">12.07.2019</p>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+	 Nam massa odio, pulvinar vitae risus at, luctus scelerisquenim.
+	Mauris pellentesque, velit in vestibulum pellentesque, e
+rat nulla ultricies purus, et dignissim justo ante non risus
+<div class="orange-line"></div>
+<div class="more-wrap">
+	<a href="#" class="more5">Więcej>></a>
+</div>
+</div>
+
+	</div>
+</section>
+
 
 	<div class="container costam">
 		<div class="footer-background">
