--- a/news.html
+++ b/news.html
@@ -114,7 +114,7 @@
 			<div class="text-part">
 				<h3 id="first-h">Lorem ipsum dolor sit amet, consectetur</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc bibendum imperdiet tincidunt. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer nec odio egestas, tempus risus nec, mollis dui. Vestibulum elit turpis, elementum vitae est eu, eleifend iaculis massa. Suspendisse fringilla</p>
-				<hr>
+				<hr class="hr-line">
 				<div class="data-more">
 					<div class="data-wrapper">
 					<i class="far fa-calendar-alt"></i>
@@ -131,7 +131,7 @@
 			<div class="text-part">
 				<h3 id="second-h">Lorem ipsum dolor sit amet, consectetur</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc bibendum imperdiet tincidunt. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer nec odio egestas, tempus risus nec, mollis dui. Vestibulum elit turpis, elementum vitae est eu, eleifend iaculis massa. Suspendisse fringilla</p>
-				<hr>
+				<hr class="hr-line">
 				<div class="data-more">
 					<div class="data-wrapper">
 					<i class="far fa-calendar-alt"></i>
@@ -148,7 +148,7 @@
 			<div class="text-part">
 				<h3 id="third-h">Lorem ipsum dolor sit amet, consectetur</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc bibendum imperdiet tincidunt. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer nec odio egestas, tempus risus nec, mollis dui. Vestibulum elit turpis, elementum vitae est eu, eleifend iaculis massa. Suspendisse fringilla</p>
-				<hr>
+				<hr class="hr-line">
 				<div class="data-more">
 					<div class="data-wrapper">
 					<i class="far fa-calendar-alt"></i>
