git for u mikulka

--- a/Koncepcja-pracy.html
+++ b/Koncepcja-pracy.html
@@ -8,7 +8,7 @@
 <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
-
+<link href="https://fonts.googleapis.com/css?family=Dosis&display=swap" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="css/css.css">
 
 
@@ -111,6 +111,7 @@
 		MIEJSKIEGO PRZEDSZKOLA Z ODDZIAŁAMI INTEGRACYJNYMI NR 16
 		W PŁOCKU
 	</h1>
+	<br>
 	<h4>Podstawa prawna</h4>
 	<p>Koncepcja pracy przedszkola oparta jest na celach i zadaniach zawartych w aktach prawnych: ustawie o systemie oświaty oraz aktach  wykonawczych do ustawy, w tym w  szczególności
 w podstawie programowej wychowania przedszkolnego, Statucie Przedszkola,
@@ -335,6 +336,7 @@ Przedszkole systematycznie zmierza do pełnej realizacji założeń koncepcji, e
 </p>
 <h4>Priorytety na lata 2015/2016–2019/2020:</h4>
 <ol>
+
 	<li>Aktualizacja i doskonalenie systemu pomocy psychologiczno-pedagogicznej.</li>
 	<li>Promocja zdrowia i świadomości ekologicznej.</li>
 	<li>Budowanie skutecznego systemu współpracy z rodzicami w celu ujednolicenia oddziaływań wychowawczych.</li>
@@ -342,7 +344,8 @@ Przedszkole systematycznie zmierza do pełnej realizacji założeń koncepcji, e
 	<li>Stworzenie nowych procedur usprawniających pracę przedszkola.</li>
 	<li>Inspirowanie kadry pedagogicznej do tworzenia nowatorskiego i twórczego stylu pracy, poszerzanie jej kompetencji.</li>
 </ol>
-<h4>     Koncepcję  opracowała  Rada  Pedagogiczna  Miejskiego  Przedszkola  z  Oddziałami Integracyjnymi  nr 16  w  Płocku  oraz uchwałą zatwierdziła do realizacji na posiedzeniu w dniu 31.08.2015r.</h4>
+<br>
+<h5> Koncepcję  opracowała  Rada  Pedagogiczna  Miejskiego  Przedszkola  z  Oddziałami Integracyjnymi  nr 16  w  Płocku  oraz uchwałą zatwierdziła do realizacji na posiedzeniu w dniu 31.08.2015r.</h4>
 </div>
 
 
