--- a/parents-payment.html
+++ b/parents-payment.html
@@ -8,7 +8,7 @@
 <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
-
+<link href="https://fonts.googleapis.com/css?family=Dosis&display=swap" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="css/css.css">
 
 
@@ -105,8 +105,8 @@
 </div>
 </section>
 <!-- Start Footer -->
-<div class="container">
-	<p>OPŁATY</p>
+<div class="container oplaty-wrapper">
+	<p id="main-oplaty">OPŁATY</p>
 	<p>Opłaty za przedszkole pobierane są zgodnie z Uchwałą Rady Miasta Płocka z dnia 27 sierpnia 2013 r. NR 636/XXXVII/. Czas na bezpłatne wychowanie, nauczanie i opiekę jest od godziny 07.00-12.00. Miesięczna opłata za korzystanie przez dziecko ze świadczeń, wynosi 1 zł za godzinę zegarową zajęć, przy czym opłaty za niepełne godziny przelicza się proporcjonalnie. W przypadku odpłatnego korzystania przez dwoje lub więcej dzieci z tej samej rodziny z przedszkoli prowadzonych lub dotowanych przez Gminę Miasto Płock lub formy opieki nad dzieckiem do lat 3, ustala się dla każdego dziecka     miesięczną opłatę za korzystanie ze świadczeń z 40% zniżką.</p>
 	<p>Ponadto zwolnione są całkowicie  z opłaty za pobyt w przedszkolu  dzieci sześcioletnie oraz dzieci z rodzin, w których dochód na jedną osobę w rodzinie nie przekracza dochodu obowiązującego przy ustalaniu prawa do zasiłku  rodzinnego.  Podstawą zwolnienia z opłaty jest przedłożenie dyrektorowi przedszkola decyzji lub zaświadczenia o otrzymanym zasiłku, wydanych na podstawie przepisów ustawy z dnia 28 listopada 2003 r.</p>
 	<p>Opłata za przygotowanie posiłków wynosi 8 zł dziennie za 3 posiłki, 5,6 zł za 2 posiłki.</p>
