--- a/ramowy-rozklad.html
+++ b/ramowy-rozklad.html
@@ -8,7 +8,7 @@
 <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
-
+<link href="https://fonts.googleapis.com/css?family=Dosis&display=swap" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="css/css.css">
 
 
@@ -105,8 +105,9 @@
 </div>
 </section>
 <!-- Start Footer -->
-<div class="container">
-	<h5>RAMOWY ROZKŁAD DNIA WEDŁUG NOWEJ PODSTAWY PROGRAMOWEJ PODSTAWA PROGRAMOWA WYCHOWANIA PRZEDSZKOLNEGO W NASZYM PRZEDSZKOLU REALIZOWANA JEST W GODZINACH 7.00 DO 12.00</>
+<div class="container ramowy-rozklad">
+	<h5 >RAMOWY ROZKŁAD DNIA WEDŁUG NOWEJ PODSTAWY PROGRAMOWEJ PODSTAWA PROGRAMOWA WYCHOWANIA PRZEDSZKOLNEGO W NASZYM PRZEDSZKOLU REALIZOWANA JEST W GODZINACH 7.00 DO 12.00</h5>
+	<br>
 	<h5>6.00 – 8.30 - SCHODZENIE SIĘ DZIECI</h5>
 	<ul>
 		<li>zabawy indywidualne i w grupach,</li>
