--- a/rodo.html
+++ b/rodo.html
@@ -8,7 +8,7 @@
 <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
-
+<link href="https://fonts.googleapis.com/css?family=Dosis&display=swap" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="css/css.css">
 
 
@@ -105,16 +105,16 @@
 </div>
 </section>
 <!-- Start Footer -->
-<div class="container">
-	<p style="text-align:center;">Klauzula informacyjna</p>
-	<p>1.    Kto przetwarza Twoje dane?</p>
+<div class="container rodo-wrapper">
+	<p id="klauzula-header">Klauzula informacyjna</p>
+	<p class="rodo-bold-p">1.    Kto przetwarza Twoje dane?</p>
 	<p>Administratorem danych osobowych jest Miejskie Przedszkole z Oddziałami Integracyjnymi nr 16, adres: ul. Stanisława Zgliczyńskiego 8 09-400 Płock NIP: 7742669587, REGON: 610025491, tel. 24 367 19 59, e-mail: mp16@zjoplock
 (zw. dalej „Przedszkolem”). Powierzone dane są wykorzystywane wyłącznie dla potrzeb wypełniania zadań ustawowych, statutowych Administratora danych osobowych  i nie są udostępniane innym podmiotom w celach marketingowych.</p>
-	<p>2.    Skąd Miejskie Przedszkole z Oddziałami Integracyjnymi nr 16 ma Twoje dane osobowe i dane osobowe Twojego dziecka?</p>
+	<p class="rodo-bold-p">2.    Skąd Miejskie Przedszkole z Oddziałami Integracyjnymi nr 16 ma Twoje dane osobowe i dane osobowe Twojego dziecka?</p>
 	<p>Zgoda na przetwarzanie danych została wyrażona w czasie zapisania dziecka do Miejskiego Przedszkola z Oddziałami Integracyjnymi nr 16. Dane osobowe dziecka i jego opiekunów prawnych zostały przekazane podczas wypełniania wniosku o przyjęcie dziecka do Miejskiego Przedszkola z Oddziałami Integracyjnymi nr 16. Podanie danych jest wymogiem ustawowym i warunkiem koniecznym do realizacji zadań statutowych placówki MP nr 16</p>
-	<p>3.    W jakim celu Miejskie Przedszkole z Oddziałami Integracyjnymi nr 16 przetwarza moje dane osobowe?</p>
+	<p class="rodo-bold-p">3.    W jakim celu Miejskie Przedszkole z Oddziałami Integracyjnymi nr 16 przetwarza moje dane osobowe?</p>
 	<p>Dane uczniów i ich opiekunów prawnych przetwarzane są w celach związanych z kształceniem, wychowaniem i opieką dzieci. Podstawą przetwarzania danych jest art. 6 ust. 1 lit. a), b), c) lub e) oraz art. 9 ust. 2 lit. a) i b) RODO*. Dodatkowo za zgodą rodziców dane przetwarzane są w celu udostępniania wizerunku i danych dzieci na stronach internetowych i portalach społecznościowych.</p>
-	<p>4.    Jakie dane osobowe są przetwarzane przez Miejskie Przedszkole z Oddziałami Integracyjnymi nr 16?</p>
+	<p class="rodo-bold-p">4.    Jakie dane osobowe są przetwarzane przez Miejskie Przedszkole z Oddziałami Integracyjnymi nr 16?</p>
 	<ol>
 		<li>dane identyfikacyjne ucznia, takie jak imię nazwisko, nr PESEL, data urodzenia, adres zamieszkania i zameldowania, itp.,</li>
 		<li>informacje na temat potrzeb edukacyjnych dziecka (np. opinie, orzeczenia poradni psychologiczno- pedagogicznych),</li>
@@ -125,16 +125,16 @@
 		<li>Informacje o wynikach ucznia w konkursach, zawodach międzyszkolnych i innych wydarzeniach [1],</li>
 		<li>Wizerunek ucznia utrwalony przy okazji prowadzania dokumentacji fotograficznej i video szkolnych uroczystości, zawodów, innych wydarzeń – Zgoda wyrażona przez rodziców, opiekunów prawnych ucznia. [2]</li>
 	</ol>
-	<p>5.    Komu Miejskie Przedszkole z Oddziałami Integracyjnymi nr 16 przekazuje dane osobowe?</p>
+	<p class="rodo-bold-p">5.    Komu Miejskie Przedszkole z Oddziałami Integracyjnymi nr 16 przekazuje dane osobowe?</p>
 	<p>Miejskie Przedszkole z Oddziałami Integracyjnymi nr 16 przekazuje dane osobowe uczniów na podstawie przepisów określonych w ustawach i rozporządzeniach dotyczących placówek oświatowych. Odbiorcami danych osobowych są m. in.: Ministerstwo Edukacji Narodowej – System Informacji Oświatowej, Kuratorium Oświaty, Okręgowa Komisja Egzaminacyjna, Organ prowadzący – Gmina Miasto Płock, Zarząd Jednostek Oświatowych,  MOPS, ubezpieczyciel na podstawie wniosku zgłoszenia szkody, inne podmioty na wniosek np. Sądu.</p>
 	<p>Pewne dane mogą być przekazywane innym podmiotom (np. świadczącym usługę dziennika elektronicznego czy sekretariatu) po zawarciu przez Miejskie Przedszkole z Oddziałami Integracyjnymi nr 16 umowy powierzenia przetwarzania danych osobowych. Odbiorcami danych są w tym przypadku:</p>
 	<ul>
 		<li>WIZJANET SP Z O. O., REGON: 072145024, NIP: 5471837042, ul Legionów 26/28, 43-300 Bielsko-Biała,</li>
 		<li>KRAKFIN S.C., REGON: 351583171, NIP: 6772093708, ul. Bartosza Głowackiego 10b lok. 20, 30-085 Kraków.</li>
 	</ul>
-	<p>6.      Jak długo Miejskie Przedszkole z Oddziałami Integracyjnymi  nr 16 przechowuje Twoje dane?</p>
+	<p class="rodo-bold-p">6.      Jak długo Miejskie Przedszkole z Oddziałami Integracyjnymi  nr 16 przechowuje Twoje dane?</p>
 	<p>Dane osobowe uczniów będą przechowywane przez Miejskie Przedszkole z Oddziałami Integracyjnymi nr 16 przez okres niezbędny do realizacji celów wynikających z pkt 3 w edukacji oraz z obowiązków wynikających z Ustawy z dnia 14 lipca 1983 r. o narodowym zasobie archiwalnym i archiwach[3] dla celów archiwizacji. Dane przetwarzane na podstawie zgody będą przechowywane do momentu wycofania zgody.</p>
-	<p>7.     Jakie są Twoje  prawa?</p>
+	<p class="rodo-bold-p">7.     Jakie są Twoje  prawa?</p>
 	<p>Masz prawo do:</p>
 	<ul>
 		<li>dostępu do treści swoich danych osobowych,</li>
@@ -146,7 +146,7 @@
 		<li>wniesienia skargi do organu nadzorczego: Prezesa Urzędu Ochrony Danych Osobowych, jeżeli sądzisz, że przetwarzanie danych osobowych narusza postanowienia RODO,</li>
 		<li>Twoje dane nie będą przetwarzane w sposób zautomatyzowany, w tym również w formie profilowania.</li>
 	</ul>
-	<p>8.     Z kim można się kontaktować w sprawie danych osobowych?</p>
+	<p class="rodo-bold-p">8.     Z kim można się kontaktować w sprawie danych osobowych?</p>
 	<p>W sprawach związanych z danymi osobowymi można się kontaktować pod adresem poczty elektronicznej: iod@zjoplock.pl </p>
 	<ol>
 		<li>Punkty od a) do g) regulują przepisy Ustawy z dnia 14 grudnia 2016 r. Prawo oświatowe (Dz. U. z 2018 r. poz. 996 tj.) oraz Ustawy z dnia 7 września 1991 r. o systemie oświaty (Dz. U. z 2017 r. poz. 2198 tj.), </li>
