--- a/about-kinder.html
+++ b/about-kinder.html
@@ -8,7 +8,7 @@
 <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
-
+<link href="https://fonts.googleapis.com/css?family=Dosis&display=swap" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="css/css.css">
 
 
@@ -108,11 +108,11 @@
 	<div class="container">
 		<div class="about-kinder-header">
 			<h1 id="about-kinder-fh1">W naszej pracy kierujemy sie zasadą:</h1>
-			<h1 id="about-kinder-q"><q><i>Namalujemy dzieciom szczęśliwe dzieciństwo i piękny świat</i></q></h1>
+			<h2 id="about-kinder-q"><q><i>Namalujemy dzieciom szczęśliwe dzieciństwo i piękny świat</i></q></h2>
 		</div>
 		<div class="about-kinder">
 			<h3 id="about-kinder-h3">O naszym przedszkolu:</h3>
-			<br>
+
 			<p>Miejskie Przedszkole z Oddziałami Integracyjnymi Nr 16 w Płocku jest następcą Państwowego Przedszkola Nr 16, które rozpoczęło swoją działalność w 1974 r.
 				w budynku przy ul. Wolskiego 8 (obecnie ul. Zgliczyńskiego 8)</p>
 			<p>Placówka posiada pięć oddziałów integracyjnych.
@@ -163,8 +163,10 @@
 				<li>Strażą Miejską ; </li>
 				<li>Klubem Osiedlowym przy ul. Łukasiewicza </li>
 			</ul>
+			<br>
 			<p>Posiadamy Certyfikat „Przedszkole Wspierające Uzdolnienia”</p>
 		</div>
+		<br>
 	</div>
 
 
