--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
-
+<link href="https://fonts.googleapis.com/css?family=Dosis&display=swap" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="css/css.css">
 
 
@@ -256,7 +256,7 @@ rat nulla ultricies purus, et dignissim justo ante non risus
 <!-- End Team -->
 
 <!-- Start Groups -->
-	<div class="container">
+	<div class="container groups-cont">
 		<div class="fun-background">
 
 			<div class="groups-header-string">
@@ -294,6 +294,7 @@ rat nulla ultricies purus, et dignissim justo ante non risus
 						<p class="animal-age">4/5 latki</p>
 					</div>
 				</div>
+
 
 				<div class="level-photo4 dlc">
 					<div class="inside-color">
@@ -351,8 +352,8 @@ rat nulla ultricies purus, et dignissim justo ante non risus
 						<li class="header-footer">KONTAKT</li>
   					<li class="footer-li"><a><i class="fa fa-phone fa-1x "></i>24 367 19 59</a></li>
             <li class="footer-li"><a><i class="fa fa-envelope fa-1x"></i>kontakt@przedszkole.pl</a></li>
-            <li class="footer-li"><a><i class="fa fa-home fa-1x "></i>ul.Zgliczyńskiego 8  </a></li>
-						<li id="footer-blank"><a href="#">blank</a></li>
+            <li class="footer-li"><a><i class="fa fa-home fa-1x "></i>ul.Zgliczyńskiego 8 </a></li>
+						<li class="kod-pocztowy"><a><i class="fas fa-adjust fa-1x "></i>09-400 Plock </a></li>
 						<li id="footer-blank"><a href="#">blank</a></li>
 						<li id="footer-blank"><a href="#">blank</a></li>
         </ul>
