--- a/Koncepcja-pracy.html
+++ b/Koncepcja-pracy.html
@@ -381,7 +381,7 @@ Przedszkole systematycznie zmierza do pełnej realizacji założeń koncepcji, e
   					<li class="footer-li"><a><i class="fa fa-phone fa-1x "></i>24 367 19 59</a></li>
             <li class="footer-li"><a><i class="fa fa-envelope fa-1x"></i>kontakt@przedszkole.pl</a></li>
             <li class="footer-li"><a><i class="fa fa-home fa-1x "></i>ul.Zgliczyńskiego 8  </a></li>
-						<li id="footer-blank"><a href="#">blank</a></li>
+						<li class="kod-pocztowy"><a><i class="fas fa-adjust fa-1x "></i>09-400 Plock </a></li>
 						<li id="footer-blank"><a href="#">blank</a></li>
 						<li id="footer-blank"><a href="#">blank</a></li>
         </ul>
